NetBSD Problem Report #2367
From gnats Thu May 2 12:33:47 1996
Received: from iraun1.ira.uka.de by pain.lcs.mit.edu (8.7.4/8.6.12) with SMTP id MAA19624 for <gnats-bugs@gnats.netbsd.org>; Thu, 2 May 1996 12:12:22 -0400 (EDT)
Message-Id: <199605021643.QAA00557@di_frueauf.ira.uka.de>
Date: Thu, 2 May 1996 16:43:57 GMT
From: Thorsten Frueauf <frueauf@ira.uka.de>
Reply-To: frueauf@ira.uka.de
To: gnats-bugs@gnats.netbsd.org
Subject: current hp300 kernel breaks at /src/sys/arch/hp300/hp300/vm_machdep.c
X-Send-Pr-Version: 3.95
>Number: 2367
>Category: port-hp300
>Synopsis: current hp300 kernel breaks at /src/sys/arch/hp300/hp300/vm_machdep.c
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: gnats-admin
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu May 02 12:35:00 +0000 1996
>Closed-Date: Thu May 02 20:49:23 +0000 1996
>Last-Modified: Thu May 02 20:52:01 +0000 1996
>Originator: Thorsten Frueauf
>Release: <NetBSD-current source date> NetBSD current 30.04.1996
>Organization:
private
>Environment:
System: NetBSD di_frueauf 1.1B NetBSD 1.1B (CYBERDYNE) #2: Fri Apr 26 00:16:29 GMT 1996 milano@di_frueauf:/usr/src/sys/arch/amiga/compile/CYBERDYNE amiga
>Description:
Making a kernel on NetBSD/hp300 current breaks at
/src/sys/arch/hp300/hp300/vm_machdep.c.
>How-To-Repeat:
Try to make a current kernel on hp300 and watch:
cc -O2 -Werror -msoft-float -I. -I../../../../arch -I../../../.. -DMILANO -DHP380 -DHP375 -DHP370 -DHP360 -DHP350 -DHP340 -DHP330 -DHP320 -DGENERIC -DDIAGNOSTIC -DDEBUG -DDDB -DCOMPAT_HPUX -DCOMPAT_NOLABEL -DUSELEDS -DFPSP -DTCP_COMPAT_42 -DMROUTING -DGATEWAY -DINET -DMFS -DPROCFS -DFDESC -DKERNFS -DUNION -DNFSCLIENT -DNFSSERVER -DCD9660 -DQUOTA -DFFS -DFIFO -DNKMEMCLUSTERS=1024 -DKTRACE -DSYSVMSG -DSYSVSEM -DSYSVSHM -DCOMPAT_10 -DCOMPAT_09 -DCOMPAT_44 -DCOMPAT_43 -DDEVPAGER -DVNODEPAGER -DSWAPPAGER -D_KERNEL -Dmc68020 -Dhp300 -DFPCOPROC -c ../../../../arch/hp300/hp300/vm_machdep.c
../../../../arch/hp300/hp300/vm_machdep.c: In function `cpu_set_kpc':
../../../../arch/hp300/hp300/vm_machdep.c:107: argument `pc' doesn't match prototype
../../../../sys/systm.h:209: prototype declaration
../../../../arch/hp300/hp300/vm_machdep.c: At top level:
../../../../arch/hp300/hp300/vm_machdep.c:204: conflicting types for `pagemove'
../../../../vm/vm_extern.h:139: previous declaration of `pagemove'
*** Error code 1
>Fix:
Don't know, sorry :-(
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: scottr
State-Changed-When: Thu May 2 16:49:23 EDT 1996
State-Changed-Why:
Adjusted prototypes.
>Unformatted:
current hp300 kernel breaks at /src/sys/arch/hp300/hp300/vm_machdep.c
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.