Fix prototypes of cpu_set_kpc() and pagemove(); closes PR 2367.